gccida/c0/write_dependence_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/write_dependence_p/src/alias.c:2673:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/write_dependence_p/src/alias.c:2673:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/write_dependence_p/src/alias.c:2674:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)mem)) ) 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/write_dependence_p/src/alias.c:2674:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)mem)) ) 
                 ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/write_dependence_p/src/obj/alias.o] Error 1
